# linear-cli

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: python-app.yml
linear/: cache.py  cli.py  client.py  console.py  highlight.py  printer.py
src/: linear_cli.py  main.py
src/linear/: __init__.py  console.py  gql.py  highlight.py  linear_client.py  main.py  models.py  print.py  queries.py
src/linear/queries/: get_issue.graphql  get_me.graphql  get_project.graphql  get_team.graphql
src/linear/xdg/: __init__.py  app_cache.py
src/xdg/: app_cache.py  constants.py
